# river_flows

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
artifacts/: config.json  feature_cols.json  flow_cnn_state.pt  x_scaler.joblib  y_scaler.joblib
river_flows/: app.py
river_flows/alembic/: env.py
river_flows/background_jobs/: save_current_river_flow.py  save_previous_date_river_flows.py  scheduler.py
river_flows/clients/: snotel_client.py  usgs_client.py
river_flows/config/: config.py
river_flows/data/: exceptions.py  hourly_rf_feature.py  oni.py  requests.py  responses.py  site_condition.py  snotel.py
river_flows/handlers/: hourly_river_flow_features_handler.py  oni_handler.py  populate_hourly_river_flow_features_handler.py  populate_oni_handler.py  populate_site_conditions_handler.py  populate_snotel_handler.py  predict_peak_river_flow.py  site_conditions_handler.py  snotel_handler.py
river_flows/models/: artifacts.py  dataset.py  features.py  infer.py  metrics.py  model.py  train.py
river_flows/orm/: hourly_rf_feature.py  mixins.py  oni.py  site_condition.py  snotel.py
river_flows/repositories/: base.py  hourly_river_flow_features_repository.py  oni_repository.py  site_condition_repository.py  snotel_repository.py
river_flows/utils/: db.py  oni_scaper.py
scripts/: oni_scrape.py  plot_predictions.py  river_predictions.py  snotel.py  train_cnn_model.py
tests/: conftest.py  docker-compose.yml
tests/integration/: app_test.py  conftest.py  db_test.py
tests/utils/: db.py
(+22 files in other folders)
